--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 					  </div>
 							<div class="barre-rech-mobile" title="Rechercher">
 							</div>
-							<div class="barre-newsletter-mobile" title="S'abonner a la newsletter">
+							<div id="flash-actu1" class="barre-newsletter-mobile" title="S'abonner a la newsletter">
 						</div>
 					</div>
         </div><!--/.container-fluid -->
